--- a/src/pages/hello-ionic/hello-ionic.scss
+++ b/src/pages/hello-ionic/hello-ionic.scss
@@ -1,3 +1,9 @@
 page-hello-ionic {
-
+    .title{
+        text-align: left;
+        // span{
+        //     margin-top: 4rem;
+        //     margin-left: 3rem;
+        // }
+    }
 }
