--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,6 @@
 page-hello-ionic {
     .title{
-        text-align: left;
+        //text-align: left;
         // span{
         //     margin-top: 4rem;
         //     margin-left: 3rem;
