--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,27 +1,1 @@
-<ion-menu [content]="content" style="menu-width: 400px">
-
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Pages</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <ion-content>
-    <ion-list>
-      <ion-list-header >
-        <span style="font-size: large; margin-left: 1px">预定</span>
-      </ion-list-header>
-      <button style="margin-left: 10px" ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
-      <ion-list no-lines>
-        <button ion-item *ngFor="let p of pages" (click)="openPage(p)">
-          {{p.title}}
-        </button>
-      </ion-list>
-    </ion-list>
-  </ion-content>
-
-</ion-menu>
-
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="rootPage" #nav></ion-nav>
