--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -19,4 +19,11 @@ page-order {
     //font-weight: bold;
     color: #fff;
   }
+  //ion-calendar-month button.today{
+  //  //border: 1px solid color($colors,'primary');
+  //  background-color: #488aff;
+  //  p {
+  //    color:#fff!important;
+  //  }
+  //}
 }
