--- a/src/pages/select-type/select-type.scss
+++ b/src/pages/select-type/select-type.scss
@@ -1,3 +1,20 @@
 page-select-type {
+  .type-list-card {
+    height: 20vh;
+    position: relative;
+    text-align: center;
+  }
+
+  .card-title {
+    //height: 100%;
+    background-color: rgba(2d,2d,2d, 0.5);
+    line-height: 20vh;
+    position: absolute;
+    bottom: 0;
+    font-size: 1.5em;
+    width: 100%;
+    //font-weight: bold;
+    color: #fff;
+  }
 
 }
