--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,12 @@
 page-home {
+
+  .swiper-slide img {
+    width: 100% !important;
+    max-width: none;
+    height: 40vh !important;
+    max-height: none;
+  }
+
   .toolbar-ios {
     min-height: 55px !important;
   }
@@ -21,8 +29,11 @@ page-home {
   }
 
   img{
-    width: 100%;
-    height: 250px;
+    width: 100% !important;
+    height: 40vh !important;
+    margin-top: -6vh;
+    margin-bottom: -6vh;
+    overflow: hidden;
   }
 
 
@@ -32,21 +43,16 @@ page-home {
   }
 
   .card-ios {
-    margin: 0 0 10px !important;
-    //border-radius: 2px;
+    margin: 0 0 1vh !important;
     width: 100% !important;
-    //margin-bottom: 5px;
-    //font-size: 1.4rem;
-    //background: #fff;
-    //-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-    //box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   }
 
   ion-card {
     //height: 70px;
+    height: 29vh;
     position: relative;
     //text-align: center;
-    margin-bottom: 5px;
+    margin-bottom: 1vh;
 
     .no-product {
       text-align: center;
@@ -62,8 +68,8 @@ page-home {
     height: 180px;
     line-height: 5vh;
     position: absolute;
-    left: 10px;
-    top: 70px;
+    left: 5vw;
+    top: 7vh;
     bottom: 35px;
     //font-size: 1.5em;
     //width: 100%;
@@ -80,8 +86,8 @@ page-home {
     //height: 180px;
     line-height: 5vh;
     position: absolute;
-    left: 10px;
-    top: 116px;
+    left: 5vw;
+    top: 13vh;
     bottom: 35px;
     font-size: 2em;
     //width: 100%;
