--- a/src/pages/waiting-use/waiting-use.scss
+++ b/src/pages/waiting-use/waiting-use.scss
@@ -5,6 +5,13 @@ page-waiting-use {
       font-weight: bold;
     }
   }
+  img{
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
+    margin-top: -50px;
+    margin-bottom: -50px;
+  }
 
   ion-item {
     padding:  0 !important;
