--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -1,4 +1,19 @@
 page-order {
+
+  /* 头部样式*/
+  .toolbar-ios {
+    min-height: 55px !important;
+  }
+
+  .toolbar-title-ios{
+    text-align: left !important;
+  }
+
+  .cut-title{
+    font-size: 1.2rem !important;
+    font-weight: 500 !important;
+  }
+
   .ion-card-prod {
     width: 100vw !important;
     margin: 1vh 0 !important;
@@ -8,14 +23,52 @@ page-order {
     background-image: none
   }
 
+  .list-ios {
+    margin: 0 !important;
+  }
+
   .type-list {
-    display: flex;
-    flex-direction: column;
-    justify-content:space-around;
-    ion-item {
-      flex-grow: 1;
-      height: calc(80%/3);
+  }
+
+
+  .item-list-normal {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.8);
+  }
+
+  .item-3 {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.8);
+    height: 24.5vh;
+    img {
+      width: 60px;
+      height: 60px;
     }
+    ion-label {
+      font-size: 2rem !important;
+    };
+  }
+
+  .item-4 {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.8);
+    height: 18.5vh;
+    img {
+      width: 50px;
+      height: 50px;
+    }
+    ion-label {
+      font-size: 1.7rem !important;
+    };
+  }
+
+  .item-5 {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.8);
+    height: 14vh;
+    img {
+      width: 40px;
+      height: 40px;
+    }
+    ion-label {
+      font-size: 1.5rem !important;
+    };
   }
 
   .card-title {
