--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -33,6 +33,7 @@ page-order {
 
   .item-list-normal {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.8);
+    background-color: rgba(191, 191, 191, 0.5);
   }
 
   .item-3 {
