--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -33,7 +33,23 @@ page-order {
 
   .item-list-normal {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.8);
-    background-color: rgba(191, 191, 191, 0.5);
+    background-color: rgba(220, 220, 220, 0.5);
+  }
+
+  // 产品名称字体
+  .product-title {
+    font-size: 2rem;
+    color: #000000;
+  }
+
+  // 订餐按钮
+  .order-button {
+    float: right;
+    margin-right: 6vw;
+    margin-top: -6.3vh;
+    width: 16vw;
+    height:6vh !important;
+    font-size: 1.8rem !important;
   }
 
   .item-3 {
