--- a/src/pages/detail-modal/detail-modal.scss
+++ b/src/pages/detail-modal/detail-modal.scss
@@ -28,7 +28,7 @@ page-detail-modal {
     height: 35px;
     border-radius: 10px;
     position: fixed;
-    bottom: 7%;
+    bottom: 40vh;
     right: 10%;
     font-size: 1.2em;
     //width: 100%;
