--- a/src/pages/waiting-use/waiting-use.scss
+++ b/src/pages/waiting-use/waiting-use.scss
@@ -13,6 +13,17 @@ page-waiting-use {
     font-weight: 500 !important;
   }
 
+  // 覆盖原有样式
+  ion-item-options {
+    .button {
+      //height: 40% !important;
+      min-height: 0 !important;
+    }
+  }
+  .col {
+    padding: 0 !important;
+  }
+
   ion-list-header{
     text-align: center;
     line-height: 7vh;
@@ -65,6 +76,6 @@ page-waiting-use {
     //float: left;
   }
   .operator-button {
-    width: 20vw;
+    width: 23vw;
   }
 }
