--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,5 +1,9 @@
 page-login {
 
+  .toast-ctrl {
+    width: 50%;
+  }
+
   .list-ios > .item-block:first-child {
     border-top: none !important;
   }
