--- a/src/pages/detail-modal/detail-modal.scss
+++ b/src/pages/detail-modal/detail-modal.scss
@@ -30,7 +30,7 @@ page-detail-modal {
     border-radius: 10px;
     position: fixed;
     bottom: 10vh;
-    right: 10%;
+    right: 10vw;
     font-size: 1.2em;
     //width: 100%;
     //font-weight: bold;
