--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,5 @@
 page-home {
+  position: relative;
 
   .swiper-slide img {
     width: 100% !important;
@@ -50,16 +51,24 @@ page-home {
 
 
   .card-ios {
-    margin: 0 0 1vh !important;
+    margin: 0 0 0.5vh !important;
     width: 100% !important;
+  }
+
+  .footer-card {
+    //position: fixed;
+    //bottom: 0;
+    ion-card {
+      margin: 0 !important;
+    }
   }
 
   ion-card {
     //height: 70px;
-    height: 29vh;
+    height: 30vh;
     position: relative;
     //text-align: center;
-    margin-bottom: 1vh;
+    //margin-bottom: 1vh;
 
     .no-product {
       text-align: center;
