--- a/src/pages/waiting-use-list/waiting-use-list.scss
+++ b/src/pages/waiting-use-list/waiting-use-list.scss
@@ -79,11 +79,15 @@ page-waiting-use-list {
 
   //
   .btn-list {
-    display: flex;
-    width: 45vw;
+    //display: flex;
+    //width: 46vw;
     height: 20vh
   }
   .operator-button {
-    width: 23vw;
+    float: left !important;
+    height: 50% !important;
+    padding: 0 !important;
+    //width: 22.5vw;
+    width: 50%;
   }
 }
