--- a/src/pages/consume-record/consume-record.scss
+++ b/src/pages/consume-record/consume-record.scss
@@ -3,4 +3,13 @@ page-consume-record {
     width: 33.33vw !important;
   }
 
+  .bage-message {
+    padding: 0 !important;
+    margin-left: -10px !important;
+    margin-top: -20px !important;
+    //min-width: 3px !important;
+    font-size: 1rem !important;
+    background-color: #ff0f1c !important;
+  }
+
 }
