--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,15 @@
 page-home {
   position: relative;
 
+  .bage-message {
+    padding: 0 !important;
+    margin-left: -10px !important;
+    margin-top: -20px !important;
+    //min-width: 3px !important;
+    font-size: 1rem !important;
+    background-color: #ff0f1c !important;
+  }
+
   .swiper-slide img {
     width: 100% !important;
     max-width: none;
