--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -1,5 +1,14 @@
 page-order {
 
+  .bage-message {
+    padding: 0 !important;
+    margin-left: -10px !important;
+    margin-top: -20px !important;
+    //min-width: 3px !important;
+    font-size: 1rem !important;
+    background-color: #ff0f1c !important;
+  }
+
   /* 头部样式*/
   .toolbar-ios {
     min-height: 55px !important;
@@ -60,7 +69,7 @@ page-order {
       height: 60px;
     }
     ion-label {
-      font-size: 2rem !important;
+      font-size: 2.3rem !important;
     };
   }
 
@@ -72,7 +81,7 @@ page-order {
       height: 50px;
     }
     ion-label {
-      font-size: 1.7rem !important;
+      font-size: 2.3rem !important;
     };
   }
 
@@ -84,7 +93,7 @@ page-order {
       height: 40px;
     }
     ion-label {
-      font-size: 1.5rem !important;
+      font-size: 2.3rem !important;
     };
   }
 
