--- a/src/pages/overdue/overdue.scss
+++ b/src/pages/overdue/overdue.scss
@@ -1,3 +1,10 @@
 page-overdue {
-
+  .bage-message {
+    padding: 0 !important;
+    margin-left: -10px !important;
+    margin-top: -20px !important;
+    //min-width: 3px !important;
+    font-size: 1rem !important;
+    background-color: #ff0f1c !important;
+  }
 }
