--- a/src/pages/waiting-use/waiting-use.scss
+++ b/src/pages/waiting-use/waiting-use.scss
@@ -1,5 +1,14 @@
 page-waiting-use {
 
+  .bage-message {
+    padding: 0 !important;
+    margin-left: -10px !important;
+    margin-top: -20px !important;
+    //min-width: 3px !important;
+    font-size: 1rem !important;
+    background-color: #ff0f1c !important;
+  }
+
   .toolbar-ios {
     min-height: 55px !important;
   }
