--- a/src/pages/message-three-month/message-three-month.scss
+++ b/src/pages/message-three-month/message-three-month.scss
@@ -1,3 +1,9 @@
 page-message-three-month {
-
+  .message-content {
+    line-height: 35px;
+    width: 60vw;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
