--- a/src/pages/consume-record-month/consume-record-month.scss
+++ b/src/pages/consume-record-month/consume-record-month.scss
@@ -1,3 +1,13 @@
 page-consume-record-month {
 
+  position: absolute;
+  /*无数据样式*/
+  .null-tips {
+    color: #bfbfbf;
+    position: relative;
+    left: 44%;
+    margin-top: 48%;
+    font-size: 1.7rem;
+  }
+
 }
