--- a/src/pages/message-three-month/message-three-month.scss
+++ b/src/pages/message-three-month/message-three-month.scss
@@ -1,4 +1,14 @@
 page-message-three-month {
+
+  position: absolute;
+  /*无数据样式*/
+  .null-tips {
+    color: #bfbfbf;
+    position: relative;
+    left: 44%;
+    margin-top: 48%;
+    font-size: 1.7rem;
+  }
   .message-content {
     line-height: 35px;
     width: 60vw;
