--- a/src/pages/waiting-use-list/waiting-use-list.scss
+++ b/src/pages/waiting-use-list/waiting-use-list.scss
@@ -90,4 +90,9 @@ page-waiting-use-list {
     //width: 22.5vw;
     width: 50%;
   }
+
+  .unpack-btn {
+    color: #bfbfbf;
+    background-color: rgba(191, 191, 191, 0.25) !important;
+  }
 }
