--- a/src/pages/consume-record-three-months/consume-record-three-months.scss
+++ b/src/pages/consume-record-three-months/consume-record-three-months.scss
@@ -1,3 +1,11 @@
 page-consume-record-three-months {
-
+  position: absolute;
+  /*无数据样式*/
+  .null-tips {
+    color: #bfbfbf;
+    position: relative;
+    left: 44%;
+    margin-top: 48%;
+    font-size: 1.7rem;
+  }
 }
