--- a/src/pages/overdue/overdue.scss
+++ b/src/pages/overdue/overdue.scss
@@ -1,4 +1,14 @@
 page-overdue {
+  position: absolute;
+  /*无数据样式*/
+  .null-tips {
+    color: #bfbfbf;
+    position: relative;
+    left: 44%;
+    margin-top: 48%;
+    font-size: 1.7rem;
+  }
+
   .bage-message {
     padding: 0 !important;
     margin-left: -10px !important;
