--- a/src/pages/unread-message/unread-message.scss
+++ b/src/pages/unread-message/unread-message.scss
@@ -1,4 +1,15 @@
 page-unread-message {
+
+  position: absolute;
+  /*无数据样式*/
+  .null-tips {
+    color: #bfbfbf;
+    position: relative;
+    left: 44%;
+    margin-top: 48%;
+    font-size: 1.7rem;
+  }
+
   .message-content {
     line-height: 35px;
     width: 60vw;
