--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -1,4 +1,14 @@
+
 page-order {
+
+  //.slide-down {
+  //  //@include slideInDown();
+  //}
+  //
+  //ion-list {
+  //  @include slideInDown();
+  //}
+
   position: absolute;
 
   /*无数据样式*/
