--- a/src/pages/detail-modal/detail-modal.scss
+++ b/src/pages/detail-modal/detail-modal.scss
@@ -26,14 +26,16 @@ page-detail-modal {
   }
 
   .order-btn {
+    margin: 0 !important;
     z-index: 100;
     background-color: rgba(39, 194, 15, 0.6);
-    width: 20%;
+    //width: 20%;
     height: 35px;
-    border-radius: 10px;
+    //border-radius: 10px;
     position: fixed;
-    bottom: 10vh;
-    right: 10vw;
+    bottom: 0;
+    //bottom: 10vh;
+    //right: 10vw;
     font-size: 1.2em;
     //width: 100%;
     //font-weight: bold;
