--- a/src/pages/detail-modal/detail-modal.scss
+++ b/src/pages/detail-modal/detail-modal.scss
@@ -29,8 +29,8 @@ page-detail-modal {
     margin: 0 !important;
     z-index: 100;
     background-color: rgba(39, 194, 15, 0.6);
-    //width: 20%;
-    height: 35px;
+    width: 100vw;
+    height: 7vh;
     //border-radius: 10px;
     position: fixed;
     bottom: 0;
