--- a/src/pages/detail-modal/detail-modal.scss
+++ b/src/pages/detail-modal/detail-modal.scss
@@ -28,7 +28,7 @@ page-detail-modal {
   .order-btn {
     margin: 0 !important;
     z-index: 100;
-    background-color: rgba(39, 194, 15, 0.6);
+    background-color: #28bf0c;
     width: 100vw;
     height: 7vh;
     //border-radius: 10px;
