--- a/src/pages/waiting-use-list/waiting-use-list.scss
+++ b/src/pages/waiting-use-list/waiting-use-list.scss
@@ -1,8 +1,12 @@
 page-waiting-use-list {
 
 
+  /* 头部样式*/
   .toolbar-ios {
     min-height: 55px !important;
+    p {
+      margin: 0 !important;
+    }
   }
 
   .toolbar-title-ios{
