--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,5 @@
 page-home {
+
   //position: relative;
 
   //.null-content {
@@ -51,6 +52,9 @@ page-home {
   /* 头部样式*/
   .toolbar-ios {
     min-height: 55px !important;
+    p {
+      margin: 0 !important;
+    }
   }
 
   .toolbar-title-ios{
