--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -51,17 +51,25 @@ page-home {
 
   /* 头部样式*/
   .toolbar-ios {
-    min-height: 55px !important;
+    min-height: 70px !important;
     p {
       margin: 0 !important;
     }
   }
+
+  //.toolbar-android {
+  //  min-height: 68px !important;
+  //  p {
+  //    margin: 0 !important;
+  //  }
+  //}
 
   .toolbar-title-ios{
     text-align: left !important;
   }
 
   .cut-title{
+    //padding-top: 5px !important;
     font-size: 1.2rem !important;
     font-weight: 500 !important;
   }
