--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -51,6 +51,7 @@ page-home {
 
   /* 头部样式*/
   .toolbar-ios {
+    color: #686868;
     min-height: 70px !important;
     p {
       margin: 0 !important;
@@ -78,7 +79,7 @@ page-home {
 
 
   .swiper-pagination-bullet-active {
-    background: #DAA520 !important;
+    background: #D97300 !important;
     opacity: 1;
   }
 
