--- a/src/pages/waiting-use/waiting-use.scss
+++ b/src/pages/waiting-use/waiting-use.scss
@@ -28,7 +28,8 @@ page-waiting-use {
 
   /* 头部样式*/
   .toolbar-ios {
-    min-height: 55px !important;
+    color: #686868;
+    min-height: 70px !important;
     p {
       margin: 0 !important;
     }
