--- a/src/pages/waiting-use-list/waiting-use-list.scss
+++ b/src/pages/waiting-use-list/waiting-use-list.scss
@@ -3,7 +3,8 @@ page-waiting-use-list {
 
   /* 头部样式*/
   .toolbar-ios {
-    min-height: 55px !important;
+    color: #686868;
+    min-height: 70px !important;
     p {
       margin: 0 !important;
     }
