--- a/src/pages/overdue/overdue.scss
+++ b/src/pages/overdue/overdue.scss
@@ -10,9 +10,10 @@ page-overdue {
     }
   }
 
-  历史用餐记录
-  /*无数据样式*/
-  .null-tips {
+  //历史用餐记录
+
+
+  .null-tips{
     color: #bfbfbf;
     position: relative;
     left: 44%;
