--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -16,6 +16,10 @@ page-home {
   //  }
   //}
 
+  ion-buttons {
+    margin: 0 0.4rem !important;
+  }
+
   .null-tips {
     color: #bfbfbf;
     position: relative;
