--- a/src/pages/waiting-use/waiting-use.scss
+++ b/src/pages/waiting-use/waiting-use.scss
@@ -2,6 +2,10 @@ page-waiting-use {
 
   position: absolute;
 
+  ion-buttons {
+    margin: 0 0.4rem !important;
+  }
+
   //ion-header{
   //  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
   //}
