--- a/src/pages/consume-record/consume-record.scss
+++ b/src/pages/consume-record/consume-record.scss
@@ -1,5 +1,9 @@
 page-consume-record {
 
+  ion-buttons {
+    margin: 0 0.4rem !important;
+  }
+
   .toolbar-ios {
     color: #686868;
     min-height: 70px !important;
