--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -175,12 +175,26 @@ page-order {
 
   ion-slide {
     img {
-      width: 100%;
-      height: 250px;
+      width: 100% !important;
+      height: 40vh !important;
       overflow: hidden;
-      margin-top: -50px;
-      margin-bottom: -50px;
+      margin-top: -6vh;
+      margin-bottom: -6vh;
     }
+  }
+
+  // 轮播图的点的样式
+  .swiper-pagination-bullet-active {
+    background: #D97300 !important;
+    opacity: 1;
+  }
+
+  .swiper-pagination-bullet {
+    width: 7px !important;
+    height: 7px !important;
+    background: #808080;
+    opacity: .8 !important;
+    pointer-events: auto;
   }
 
   .message-content {
