--- a/src/pages/detail-modal/detail-modal.scss
+++ b/src/pages/detail-modal/detail-modal.scss
@@ -3,9 +3,12 @@ page-detail-modal {
   position: relative;
   //margin-left: 8vw;
   ion-slides{
-    height: 250px !important;
+    width: 100vw;
+    //height: 250px !important;
     img {
-      height: 100% !important;
+      width: 100%;
+      height: auto;
+      //height: 100% !important;
     }
   }
 
