--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,6 +11,10 @@ $font-path: "../assets/fonts";
 // http://ionicframework.com/docs/theming/rtl-support/
 $app-direction: ltr;
 
+$menu-width: 100vw;
+
+$menu-small-width: 100vw - 12vw;
+
 
 @import "ionic.globals";
 
